--- a/codigo/src/pages/singin/style.css
+++ b/codigo/src/pages/singin/style.css
@@ -12,54 +12,36 @@
 }
 
 * {
-   padding: 0;
-   margin: 0;
-   box-sizing: border-box; 
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box; 
+}
+ 
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-html {
-    
-    @media (max-width: 1080px) { 
-        font-size: 93.75%; 
-    } 
-        
-    @media (max-width: 720px) { 
-        font-size: 87.5%; 
-    }
+/* Gap 2rem */
+.gap-2{
+    padding: 2rem 0;
 }
 
-body {
-    background-color: var(--blue-900);
-    color: var(--white-200);
-    font-family: 'Roboto', sans-serif;
+/* Gap 1rem */
+.gap-1{
+    padding: 1rem 0;
 }
 
-#banner-container {
+/* Flex - column */
+.flex-column{
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    text-align: start;
-
-    height: 100vh;
-
-    padding-bottom: 5rem;
-}
-
-#hero-container{
-    text-align: start;
-
-    max-width: 460px;
-    width: 100%;
 }
 
 
-#small-hero{
-    color: var(--blue-500);
-    font-weight: 500;
-    font-size: 1.3rem;
-}
 
-#hero{
-    font-size: 2.5rem;   
-}
+
+
+
