--- a/src/pages/overview/mobile.css
+++ b/src/pages/overview/mobile.css
@@ -9,33 +9,24 @@
         align-items: center;
         flex-direction: column;
 
-       
         max-width: 375px;
         width: 100%;
 
         height: 100vh;
         margin-top: 1.5rem;
 
-    }
-
-    aside > div {
-        display: flex;
-        align-items: flex-start;
-    }
-
-    aside > div > img {
-        width: 80%;
+        position: relative;
     }
 
     aside > div > button {
-        padding: 0.5rem;
+        position: absolute;
+        top: 0;
+        right: 20px;
+
+        padding: 0.3rem 0.5rem;
         background-color: var(--blue-500);
         border: none;
         border-radius: 10px;
-    }
-
-    aside > div > button > img {
-        width: 20px;
     }
 
     nav a {
@@ -64,7 +55,11 @@
         border-radius: 10px;
     }
 
-    main > button > img {
+    #logo {
+        width: 80%;
+    }
+    
+    .menu-icon {
         width: 20px;
     }
 
