--- a/src/pages/overview/mobile.css
+++ b/src/pages/overview/mobile.css
@@ -106,6 +106,14 @@
         width: 20px;
     }
 
+    #openMenu {
+        display: block;
+    }
+
+    #closeMenu {
+        display: block;
+    }
+
     .close-menu{
         display: none;
     }
