--- a/src/pages/overview/mobile.css
+++ b/src/pages/overview/mobile.css
@@ -42,7 +42,7 @@
         height: 100vh;
         background-color: var(--blue-700);
     
-        border-radius: 50px 0 0 50px;
+        border-radius: 0 0 0 0;
 
         z-index: 0;
     }
