--- a/src/pages/user/desktop.css
+++ b/src/pages/user/desktop.css
@@ -44,6 +44,7 @@ main {
     width: 100%;
 
     height: 100vh;
+    overflow-y: auto;
 }
 
 main > header {
@@ -84,34 +85,82 @@ main > header {
     font-size: 1.25rem;
 }
 
-#investiments-returns {
+/*? User page specific styles */
+
+
+section {
     margin-top: 2rem;
 
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    padding: 0 2rem;
+}
 
-    justify-content: space-around;
+#user-info {        
+    display: flex;
+    flex-direction: column;
 
     gap: 1.5rem;
 }
 
-.return-cards {
+#user-special {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
-    color: var(--blue-500);
-    font-size: 1rem;
+
+    text-align: center;
+    
+    gap: 1rem;
 }
 
-#card-return {
+#user-special > img {
+    image-rendering: auto;
+    max-width: 400px;
+    width: 70%;
+}
+
+.user-info-text {
+    color: var(--blue-200);
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.user-info-text > p {
     color: var(--white-200);
-    font-weight: bold;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
-#total-return {
-    color: var(--green-500);
-    font-weight: bold;
+#user-separator {
+    margin: 2rem 0;
+    border: 1px solid var(--blue-500);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 1.5rem;
+
+    margin-bottom: 2rem;
+}
+
+.user-inputs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    color: var(--white-200);
     font-size: 1.5rem;
+    font-weight: bold; 
+    width: 100%;
+
+    gap: 0.5rem;
+}
+
+.user-inputs > input {
+    width: 80%;
+    padding: 0.7rem 0.5rem;
+    background-color: var(--blue-200);
+    border: none;
+
+    border-radius: 8px;
 }
