--- a/src/pages/balance/mobile.css
+++ b/src/pages/balance/mobile.css
@@ -39,6 +39,7 @@
 
     main {
         flex: 1;
+        overflow-y: auto;
         height: 100vh;
         background-color: var(--blue-700);
     
@@ -88,17 +89,37 @@
         font-size: 14px;
     }
 
-    #separator {
-        height: 2rem;
-        border: 1px solid var(--white-200);
-    }
-
     #user-avatar > div > p {
         color: var(--white-200);
         font-size: 1.25rem;
     }
 
-    /*? investiments styles  */
+    #separator {
+        height: 2rem;
+        border: 1px solid var(--white-200);
+    }
+
+    /*? Balance page specific styles */
+
+    section {
+        padding: 1rem 2rem;
+    }
+
+    #button-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .balance-buttons {
+        border: none;
+        border-radius: 10px;
+        padding: 0.5rem 1rem;
+        
+        background-color: var(--blue-500);
+        color: var(--white-200);
+        
+        font-weight: 500;
+    }
 
     #investiments-returns {
         margin-top: 2rem;
@@ -131,6 +152,32 @@
         font-weight: bold;
         font-size: 1.5rem;
     }
+
+    #table-container {
+        max-width: 700px;
+        overflow-x: auto;
+    }
+
+    table {
+        margin-top: 3rem;
+        padding: 1rem;
+
+        border-radius: 10px;
+
+        width: 100%;
+        overflow-x: scroll;
+
+        text-align: left;
+
+        background-color: var(--blue-900);
+    }
+
+    #table-heads {
+        color: var(--blue-200);
+    }
+
+
+
 
 
     #logo {
