Fix: Sing in and Sing up pages

--- a/src/pages/singin/desktop.css
+++ b/src/pages/singin/desktop.css
@@ -73,8 +73,10 @@ main {
 }
 
 main > section {
-    padding: 8rem;
+    padding: 5rem 8rem;
     text-align: center;
+
+    width: 600px;
 }
 
 form {
