--- a/src/pages/balance/mobile.css
+++ b/src/pages/balance/mobile.css
@@ -2,6 +2,7 @@
 
     body {
         display: flex;
+        position: relative;
     }
     
     aside {
@@ -177,7 +178,57 @@
     }
 
 
+    #modal-container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100vw;
+        height: 100vh;
 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background-color: #0d1321d9;
+    }
+
+    #modal-content {
+        max-width: 500px;
+        width: 100%;
+
+        padding: 1rem;
+        border-radius: 10px;
+
+        background-color: var(--blue-700);
+    }
+
+    #modal-content > form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-inputs{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        color: var(--white-200);
+        font-size: 1.5rem;
+        font-weight: bold; 
+        width: 50%;
+
+        gap: 0.5rem;
+    }
+
+    .user-inputs > input {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--blue-200);
+        border: none;
+
+        border-radius: 8px;
+    }
 
 
     #logo {
