--- a/src/pages/balance/mobile.css
+++ b/src/pages/balance/mobile.css
@@ -77,7 +77,7 @@
         font-size: 2rem;
     }
 
-    #user-avatar {
+    #modal-avatar {
         display: flex;
         align-items: center;
         flex-wrap: wrap;
@@ -90,7 +90,7 @@
         font-size: 14px;
     }
 
-    #user-avatar > div > p {
+    #modal-avatar > div > p {
         color: var(--white-200);
         font-size: 1.25rem;
     }
@@ -177,8 +177,11 @@
         color: var(--blue-200);
     }
 
+    .close-modal {
+        display: none;
+    }
 
-    #modal-container {
+    .open-modal {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -207,9 +210,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        gap: 0.5rem;
     }
 
-    .user-inputs{
+    .modal-inputs{
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -222,22 +227,52 @@
         gap: 0.5rem;
     }
 
-    .user-inputs > input {
+    .modal-inputs > input {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--blue-200);
+        border: none;
+        
+        width: 100%;
+
+        border-radius: 8px;
+    }
+
+    .modal-select {
         padding: 0.7rem 0.5rem;
         background-color: var(--blue-200);
         border: none;
 
+        width: 100%;
+
         border-radius: 8px;
     }
+
+    #modal-button {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--green-500);
+        border: none;
+
+        width: 100%;
+
+        border-radius: 8px;
+        margin-top: 1rem;
+    }
+
+
+
+
+
+
+
+
+
+
 
 
     #logo {
         width: 80%;
     }
     
-    .menu-icon {
-        width: 20px;
-    }
 
     #openMenu {
         display: block;
