--- a/src/pages/balance/mobile.css
+++ b/src/pages/balance/mobile.css
@@ -134,7 +134,7 @@
         gap: 1.5rem;
     }
 
-    .return-cards {
+    .cards-container {
         display: flex;
         align-items: center;
         gap: 0.5rem;
@@ -142,14 +142,13 @@
         font-size: 1rem;
     }
 
-    #card-return {
+    .card-return {
         color: var(--white-200);
         font-weight: bold;
         font-size: 1.5rem;
     }
     
     #total-return {
-        color: var(--green-500);
         font-weight: bold;
         font-size: 1.5rem;
     }
@@ -266,7 +265,13 @@
 
 
 
+    .green-return {
+        color: var(--green-500);
+    }
 
+    .red-return {
+        color: var(--red-500);
+    }
 
 
     #logo {
