--- a/src/pages/overview/desktop.css
+++ b/src/pages/overview/desktop.css
@@ -82,3 +82,151 @@ main > header {
     font-size: 1.25rem;
 }
 
+.user-wish-container {
+    margin: 4rem auto auto;
+    padding: 0 1.5rem;
+
+    max-width: 1000px;
+    width: 100%;        
+}
+
+.user-wish-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-wish-add {
+    width: 100%;
+    background-color: var(--blue-500);
+    
+    border-radius: 10px 10px 0 0;
+    padding: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;        
+}
+
+.user-wish-add h1 {
+    font-size: 1.5rem;
+}
+
+.user-wish-add button {
+    padding: 0.5rem 1rem;
+    background: var(--blue-700);
+    border: none;
+    border-radius: 10px;
+}
+
+#user-wish-list {
+    background-color: #3e5c7686;
+    padding: 0 1rem;
+}
+
+.user-wish-list-item {
+    border-bottom: 3px solid var(--blue-500);
+
+    text-align: center;
+    margin: 1rem 0;
+}
+
+.user-wish-list-item > div {
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+
+    font-size: 1rem;
+}
+
+
+/* Modal Styles */
+.close-modal {
+    display: none;
+}
+
+.open-modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #0d1321d9;
+}
+
+#modal-content {
+    max-width: 500px;
+    width: 100%;
+
+    text-align: end;
+
+    padding: 1rem;
+    border-radius: 10px;
+
+    background-color: var(--blue-700);
+}
+
+#modal-content > form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 0.5rem;
+}
+
+.modal-inputs{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    color: var(--white-200);
+    font-size: 1.5rem;
+    font-weight: bold; 
+    width: 50%;
+
+    gap: 0.5rem;
+}
+
+.modal-inputs > input {
+    padding: 0.7rem 0.5rem;
+    background-color: var(--blue-200);
+    border: none;
+    
+    width: 100%;
+
+    border-radius: 8px;
+}
+
+.modal-select {
+    padding: 0.7rem 0.5rem;
+    background-color: var(--blue-200);
+    border: none;
+
+    width: 100%;
+
+    border-radius: 8px;
+}
+
+#modal-button {
+    padding: 0.7rem 0.5rem;
+    background-color: var(--green-500);
+    border: none;
+
+    width: 100%;
+
+    border-radius: 8px;
+    margin-top: 1rem;
+}
+
+#closeModal {
+    background-color: var(--blue-200);
+    border: none;
+    border-radius: 5px;
+
+    padding: 0.2rem 0.5rem;
+}
