--- a/src/pages/overview/mobile.css
+++ b/src/pages/overview/mobile.css
@@ -88,6 +88,146 @@
         font-size: 14px;
     }
 
+    .user-wish-container {
+        margin: 2rem auto auto;
+        padding: 0 1.5rem;
+
+        max-width: 600px;
+        width: 100%;        
+    }
+
+    .user-wish-content {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .user-wish-add {
+        width: 100%;
+        background-color: var(--blue-200);
+        
+        border-radius: 10px 10px 0 0;
+        padding: 1rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: space-between;        
+    }
+    
+    .user-wish-add h1 {
+        font-size: 1.5rem;
+    }
+
+    .user-wish-add button {
+        padding: 0.5rem 1rem;
+        background: var(--blue-700);
+        border: none;
+        border-radius: 10px;
+    }
+
+    #user-wish-list {
+        background-color: var(--blue-500);
+        padding: 0 1rem;
+    }
+    
+    .user-wish-list-item {
+        text-align: center;
+        margin: 1rem 0;
+    }
+
+    .user-wish-list-item > div {
+        display: flex;
+        justify-content: space-between;
+        margin: 1rem 0;
+
+        font-size: 1rem;
+    }
+
+
+    .close-modal {
+        display: none;
+    }
+
+    .open-modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100vw;
+        height: 100vh;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        background-color: #0d1321d9;
+    }
+
+    #modal-content {
+        max-width: 500px;
+        width: 100%;
+
+        padding: 1rem;
+        border-radius: 10px;
+
+        background-color: var(--blue-700);
+    }
+
+    #modal-content > form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        gap: 0.5rem;
+    }
+
+    .modal-inputs{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        
+        color: var(--white-200);
+        font-size: 1.5rem;
+        font-weight: bold; 
+        width: 50%;
+
+        gap: 0.5rem;
+    }
+
+    .modal-inputs > input {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--blue-200);
+        border: none;
+        
+        width: 100%;
+
+        border-radius: 8px;
+    }
+
+    .modal-select {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--blue-200);
+        border: none;
+
+        width: 100%;
+
+        border-radius: 8px;
+    }
+
+    #modal-button {
+        padding: 0.7rem 0.5rem;
+        background-color: var(--green-500);
+        border: none;
+
+        width: 100%;
+
+        border-radius: 8px;
+        margin-top: 1rem;
+    }
+
+
+
+
+
     #separator {
         height: 2rem;
         border: 1px solid var(--white-200);
